<resources>
    <string name="app_name">Binance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="th_tr_ng">Thị trường</string>
    <string name="giao_d_ch">Giao dịch</string>
    <string name="futures">Futures</string>
    <string name="v">Ví</string>
    <string name="title_activity_splash_screen">Binance</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>