<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/trangchu" android:title="@string/trang_ch" android:icon="@drawable/custom_icon_menu_bottomnavigation_home" />
    <item android:id="@+id/thitruong" android:title="@string/th_tr_ng" android:icon="@drawable/custom_icon_menu_bottomnavigation_chart"/>
    <item android:id="@+id/giaodich" android:title="@string/giao_d_ch" android:icon="@drawable/custom_icon_menu_bottomnavigation_home_giaodich"/>
    <item android:id="@+id/futures" android:title="@string/futures" android:icon="@drawable/custom_icon_menu_bottomnavigation_home_future"/>
    <item android:id="@+id/vi" android:title="@string/v" android:icon="@drawable/custom_icon_menu_bottomnavigation_home_wallet"/>

</menu>